# ai-image-generator-cli

./: .gitignore  ADR-0001-batch-generate-design.md  AGENTS.md  README.md  main.py  pyproject.toml
image_generator/: __init__.py  cli.py  defaults.py  models.py  settings.py
image_generator/providers/: base.py  google.py  hf.py  openai.py
scripts/: batch_generate.py  generate_from_file.sh  remove_duplicates.py
